STAC-20592: Add exists earlier and later to stackelementnotfound

--- a/spec/common.api.yaml
+++ b/spec/common.api.yaml
@@ -40,6 +40,12 @@ components:
           type: string
         message:
           type: string
+        existedEarlier:
+          type: number
+          format: unix_timestamp
+        existsLater:
+          type: number
+          format: unix_timestamp
       required:
         - _type
         - objectType
