--- a/spec/common.api.yaml
+++ b/spec/common.api.yaml
@@ -40,12 +40,12 @@ components:
           type: string
         message:
           type: string
-        existedEarlier:
-          type: number
-          format: unix_timestamp
-        existsLater:
-          type: number
-          format: unix_timestamp
+        existedEarlierMs:
+          type: integer
+          format: int64
+        existsLaterMs:
+          type: integer
+          format: int64
       required:
         - _type
         - objectType
