STAC-21470: Add read notifications to user profile

--- a/spec/user_profile.api.yaml
+++ b/spec/user_profile.api.yaml
@@ -144,10 +144,15 @@ components:
           items:
             type: integer
             format: int64
+        systemNotificationsRead:
+          type: array
+          items:
+            type: string
         ownedBy:
           type: string
       required:
         - name
+        - systemNotificationsRead
     ApiToken:
       type: object
       properties:
