STAC-21479 Allow Uknown as failing health state

--- a/spec/arguments.api.yaml
+++ b/spec/arguments.api.yaml
@@ -9,6 +9,7 @@ components:
       enum:
         - DEVIATING
         - CRITICAL
+        - UNKNOWN
       type: string
     ComparatorWithoutEquality:
       enum:
