STAC-21479 Add dummy flag to monitor

--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -520,6 +520,8 @@ components:
           $ref: "#/components/schemas/MonitorStatusValue"
         runtimeStatus:
           $ref: "#/components/schemas/MonitorRuntimeStatusValue"
+        dummy:
+          type: boolean
         lastUpdateTimestamp:
           type: integer
           format: int64
