--- a/spec/agent_registrations.api.yaml
+++ b/spec/agent_registrations.api.yaml
@@ -45,11 +45,15 @@ components:
           format: int64
         agentData:
           $ref: "#/components/schemas/AgentData"
+        nodeBudgetCount:
+          type: integer
+          description: "The registration might count for more than one standard (4CPU, 16Gb) node"
       required:
         - agentId
         - lease
         - leaseUntilEpochMs
         - registeredEpochMs
+        - nodeBudgetCount
 
     AgentLease:
       type: string
